Change button id and adjust calculator height

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="display">012345678</div>
+        <div id="display">123456789</div>
         <div id="btn">
             <button id="btnac">AC</button>
             <button id="btn+/-">+/-</button>
@@ -18,7 +18,7 @@
             <button id="btn7">7</button>
             <button id="btn8">8</button>
             <button id="btn9">9</button>
-            <button id="btn*">x</button>
+            <button id="btnx">x</button>
             <button id="btn4">4</button>
             <button id="btn5">5</button>
             <button id="btn6">6</button>
