Map the buttons and add basic functions
1. Basic Operations:
Addition, subtraction, multiplication, and division functions
Proper operator precedence
Single pair evaluation at a time
Rounded answers for long decimals
2. Display Features:
Clear, readable display
Error message for division by zero
Automatic conversion to scientific notation for large numbers
Decimal point support with validation
3. Extra Features:
Backspace button (⌫)
Full keyboard support
Decimal input with validation
Responsive design
Visual feedback on button hover
Add negative number support
4. Error Handling:
Division by zero protection
Proper handling of multiple operations
Clear button resets all state
Input validation
5. The calculator supports keyboard input with the following mappings:
Numbers: 0-9 keys
Operators: +, -, *, /
Equals: Enter or =
Clear: Escape
Backspace: Backspace key
Decimal: . key

--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
 </head>
 <body>
     <div id="container">
-        <div id="display">123456789</div>
+        <div id="display">0</div>
         <div id="btn">
             <button id="btnac">AC</button>
-            <button id="btn+/-">+/-</button>
-            <button id="btn%">%</button>
-            <button id="btn/">/</button>
+            <button id="backspace">⌫</button>
+            <button id="negative">+/-</button>
+            <button id="btn/" class="operator">/</button>
             <button id="btn7">7</button>
             <button id="btn8">8</button>
             <button id="btn9">9</button>
-            <button id="btnx">x</button>
+            <button id="btnx" class="operator">x</button>
             <button id="btn4">4</button>
             <button id="btn5">5</button>
             <button id="btn6">6</button>
-            <button id="btn-">-</button>
+            <button id="btn-" class="operator">-</button>
             <button id="btn1">1</button>
             <button id="btn2">2</button>
             <button id="btn3">3</button>
-            <button id="btn+">+</button>
+            <button id="btn+" class="operator">+</button>
             <button id="sp">0</button>
-            <button id="btn.">.</button>
-            <button id="btn=">=</button>
+            <button id="btndecimal">.</button>
+            <button id="btnequal">=</button>
         </div>
     </div>
 </body>
